Enable Edit Profile Apply button only when profile has changed.

Keep track of any changes to the Profile and only enable the Apply
button when something has really changed.

Patch by Jekyll Wu adaptee@gmail.com

Might backport to 4.7 if there are no concerns.
BUG: 274501
FIXED-IN: 4.8
REVIEW: 101904